// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/TIME.proto";
import "./COP1IfAutoState.proto";
import "./COP1InternalState.proto";
import "./COP1SentQueue.proto";
import "./COP1Status.proto";
import "./COP1WaitQueue.proto";
import "./GPMCC1State.proto";
import "./DecoderType.proto";

package cop1.protobuf;

message COP1Context {
extensions 11 to 111;

  optional cop1.protobuf.COP1Status cop1Status = 1;
  optional cop1.protobuf.COP1IfAutoState cop1IfAutoState = 2;
  optional cop1.protobuf.COP1SentQueue cop1SentQueue = 3;
  optional cop1.protobuf.COP1WaitQueue cop1WaitQueue = 4;
  optional cop1.protobuf.GPMCC1State gpmcc1State = 5;
  optional cop1.protobuf.COP1InternalState cOP1InternalState = 6;
  optional cop1.protobuf.DecoderType cLCW_decoder = 7;
  optional ccsds_mal.protobuf.BOOLEAN retrans_mode = 8;
  optional ccsds_mal.protobuf.BOOLEAN initvr_mode = 9;
  optional ccsds_mal.protobuf.TIME entityKeyTime = 10;
}
