// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "./ProccessedTC.proto";


package cop1.protobuf;

message GPMCC1State {
extensions 2 to 102;

  repeated cop1.protobuf.ProccessedTC proccessedTC = 1;
}
